--- a/seoulgood---delivery/index.html
+++ b/seoulgood---delivery/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SeoulGood Delivery</title>
+    <!-- Food Delivery Icon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='24' fill='%23f97316'/%3E%3Cg fill='white' transform='translate(10, 20) scale(0.8)'%3E%3Cpath d='M85 45h-4.6l-5.7-17.2C73.4 24.3 70.2 22 66.5 22H52c-2.4 0-4.6 1.1-6.1 3l-8.3 10.4h-9.9c-2.8 0-5 2.2-5 5v14.9c0 2.8 2.2 5 5 5h.8c1.3 7 7.4 12.3 14.7 12.3s13.4-5.2 14.7-12.3h10.5c1.3 7 7.4 12.3 14.7 12.3s13.4-5.2 14.7-12.3H85c2.8 0 5-2.2 5-5V50c0-2.8-2.2-5-5-5zM33.3 62.7c-2.9 0-5.3-2.4-5.3-5.3s2.4-5.3 5.3-5.3 5.3 2.4 5.3 5.3-2.4 5.3-5.3 5.3zm44 0c-2.9 0-5.3-2.4-5.3-5.3s2.4-5.3 5.3-5.3 5.3 2.4 5.3 5.3-2.4 5.3-5.3 5.3z'/%3E%3C/g%3E%3C/svg%3E" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
